# SaaS-Platform

./: .dockerignore  .gitignore  CI_CD_SUMMARY.md  DEPLOYMENT_SETUP.md  Frontend-design-plan.txt  MODULE_SCRIPTS_RECOMMENDATIONS.md  NGINX_SETUP.md  PLATFORM_STATUS.md  README.md  README_DEPLOYMENT.md  TASK_MANAGEMENT_FEATURES.md  docker-compose.yml  milestones.md  phases.txt  requirement_project.txt
ai_service/: README.md  env.example  pyproject.toml  requirements.txt
ai_service/app/: config.py  main.py  schemas.py  security.py
ai_service/app/providers/: base.py  hf_local.py  mistral_stub.py
backend/: .dockerignore  Dockerfile  env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py  seed.py
backend/app/api/: authz.py  deps.py
backend/app/core/: security.py
backend/app/models/: __init__.py  compliance.py  entitlement.py  onboarding.py  password_reset.py  permissions.py  pos.py  role.py  taskify_config.py  tasks.py  tenant.py  user.py  vendor_credential.py  workflows.py
backend/app/schemas/: __init__.py  auth.py  billing.py  compliance_stages.py  entitlements.py  onboarding.py  onboarding_stages.py  pos.py  user.py  vendor.py
backend/app/services/: audit.py  audit_service.py  compliance_service.py  email.py  email_service.py  escalation_service.py  jurisdiction_service.py  module_onboarding.py  onboarding.py  onboarding_completion_service.py  owner_service.py  pos_analytics.py  pos_appointments.py  pos_catalog.py  pos_fulfillment.py  pos_inventory.py  pos_kitchen.py  pos_loyalty.py  pos_marketing.py  pos_payroll.py  pos_pricing.py  pos_refunds.py  pos_registers.py  pos_reputation.py  pos_sales.py  tasks.py  (+25 more)
backend/scripts/: add_password_change_required.py  add_password_change_required.sql  create_super_admin.py  create_task_tables.py  fix_user_permissions.py  migrate_subscription_table.py  migrate_subscriptions.sql  migrate_taskify_tables.py  run_migrations.py  setup_taskify.py  setup_taskify_credentials.py  test_taskify_connection.py
backend/tests/: __init__.py  conftest.py  run_tests.py  test_dashboard_metrics.py  test_pos_analytics_access.py  test_pos_finalize_sale.py  test_pos_pricing.py  test_pos_refunds.py  test_pos_registers.py  test_project_duplication.py  test_subtasks.py  test_taskify_integration.py  test_tasks_crud.py  test_time_tracking.py
(+252 files in other folders)
