[tool.poetry]
name = "saas-backend"
version = "0.1.0"
description = "Multi-tenant SaaS core (FastAPI) for auth, RBAC, billing stubs, and tenant services."
authors = ["SaaS Team <dev@saas.local>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-jose = "^3.3.0"
httpx = "^0.27.2"
pyjwt = "^2.10.1"
structlog = "^24.4.0"
email-validator = "^2.2.0"
sendgrid = "^6.11.0"
stripe = "^11.2.0"
motor = "^3.3.2"
beanie = "^1.27.0"
pymongo = "^4.6.1"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-core = "^0.3.0"
openai = "^1.54.0"
python-dateutil = "^2.9.0"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
mypy = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "N", "S", "DTZ"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"

